[fix]loading visibility

--- a/app.scss
+++ b/app.scss
@@ -79,7 +79,7 @@ body {
 
         &.loadend {
             opacity: 0;
-            visibility: none;
+            visibility: hidden;
         }
     }
 
